--- a/cabal.project
+++ b/cabal.project
@@ -17,8 +17,8 @@ source-repository-package
 
 source-repository-package
     type: git
-    location: https://github.com/hasufell/safe-directory.git
-    tag: bbb4a92e44c287ac29a58e50ce1c77fd2deff8e2
+    location: https://github.com/hasufell/directory.git
+    tag: 15338c033bf8a76d26017011454d705694663bf9
     post-checkout-command: autoreconf -fi
 
 source-repository-package
