--- a/filepath-examples.cabal
+++ b/filepath-examples.cabal
@@ -49,13 +49,13 @@ executable example3
     hs-source-dirs: examples
     default-language: Haskell2010
 
--- list directory contents via 'safe-directory'
+-- list directory contents via 'directory'
 executable example4
     import:           warnings
     main-is:          List.hs
     build-depends:    base ^>=4.14.3.0
                     , filepath ^>=1.4.99.5
-                    , safe-directory
+                    , directory
     hs-source-dirs: examples
     default-language: Haskell2010
 
