--- a/cabal.project
+++ b/cabal.project
@@ -2,18 +2,14 @@ packages: ./
 
 source-repository-package
     type: git
-    location: https://github.com/hasufell/unix.git
-    tag: 2d86597ea8dfa5a7ad968543663008880289ee84
+    location: https://github.com/haskell/unix.git
+    tag: 43acabe288f58e3d8c9c71e15d4dd7b586e26efb
+    post-checkout-command: autoreconf -fi
 
 source-repository-package
     type: git
     location: https://github.com/hasufell/Win32.git
-    tag: 4fa66128cb1622dafa80eb35c582bc926fbf4453
-
-source-repository-package
-    type: git
-    location: https://gitlab.haskell.org/haskell/filepath.git
-    tag: d7d13206fc641a615680a2b99321ba80b1ebfc57
+    tag: 9723c3d2f222fbf8a57dc058f18a0fd54b0ae77c
 
 source-repository-package
     type: git
@@ -24,6 +20,6 @@ source-repository-package
 source-repository-package
     type: git
     location: https://github.com/hasufell/file-io.git
-    tag: 9f8210da5c925e639a9b03316c833ecfd0783f54
+    tag: 558d575ec6914212ab2360efd6f695464106109f
 
 allow-newer: filepath, unix
